--- a/Web/Views/Cancion/Create.cshtml
+++ b/Web/Views/Cancion/Create.cshtml
@@ -28,9 +28,6 @@
 
     <div class="card card-default mt-3">
         <div class="card-body p-3 col-md-12">
-            <div class="card-header text-danger text-left border-bottom-0">
-                <p>* Campos requeridos</p>
-            </div>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
             <div class="row">
@@ -81,7 +78,7 @@
 
 
 
-          
+
 
 
 
@@ -89,6 +86,9 @@
 
             <div style="float:right">
                 <button type="submit" class="btn btn-success">Guardar</button>
+            </div>
+            <div class="card-footer text-danger border-bottom-0">
+                <p>* Campos requeridos</p>
             </div>
 
         </div>
