--- a/Web/Views/Cancion/Edit.cshtml
+++ b/Web/Views/Cancion/Edit.cshtml
@@ -28,9 +28,6 @@
 
     <div class="card card-default mt-3">
         <div class="card-body p-3 col-md-12">
-            <div class="card-header text-danger text-left border-bottom-0">
-                <p>* Campos requeridos</p>
-            </div>
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
             @Html.HiddenFor(model => model.Id)
             @Html.HiddenFor(model => model.Url_version)
@@ -84,7 +81,7 @@
 
             <div class="row">
 
-               
+
 
                 <div class="col-md-6">
                     <div class="form-group">
@@ -102,6 +99,10 @@
 
             <div style="float:right">
                 <button type="submit" class="btn btn-success">Guardar</button>
+            </div>
+
+            <div class="card-footer text-danger border-bottom-0">
+                <p>* Campos requeridos</p>
             </div>
 
         </div>
