--- a/Web/Views/Categoria/Create.cshtml
+++ b/Web/Views/Categoria/Create.cshtml
@@ -30,9 +30,6 @@
 <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
-                <div class="card-header text-danger text-left border-bottom-0">
-                    <p>* Campos requeridos</p>
-                </div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row text-left">
                     <div class="col-md-12">
@@ -43,9 +40,13 @@
                             @Html.ValidationMessageFor(model => model.Descripcion, "", new { @class = "text-danger" })
                         </div>
 
-                        <div style="float:right">
-                            <button type="submit" class="btn btn-success">Guardar</button>
-                        </div>
+                        
+                    </div>
+                </div>
+                <div class="card-footer text-danger text-left border-bottom-0">
+                    <p>* Campos requeridos</p>
+                    <div style="float:right">
+                        <button type="submit" class="btn btn-success">Guardar</button>
                     </div>
                 </div>
             </div>
