--- a/Web/Views/Categoria/Edit.cshtml
+++ b/Web/Views/Categoria/Edit.cshtml
@@ -29,9 +29,7 @@
     <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
-                <div class="card-header text-danger text-left border-bottom-0">
-                    <p>* Campos requeridos</p>
-                </div>
+
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row text-left">
                     <div class="col-md-12">
@@ -47,9 +45,13 @@
                                 <label class="custom-control-label" for="customSwitch3">Estado</label>
                             </div>
                         </div>
-                        <div style="float:right">
-                            <button type="submit" class="btn btn-success">Guardar</button>
-                        </div>
+                        
+                    </div>
+                </div>
+                <div class="card-footer text-danger text-left border-bottom-0">
+                    <p>* Campos requeridos</p>
+                    <div style="float:right">
+                        <button type="submit" class="btn btn-success">Guardar</button>
                     </div>
                 </div>
             </div>
