--- a/Web/Views/CorreoEmisor/Edit.cshtml
+++ b/Web/Views/CorreoEmisor/Edit.cshtml
@@ -44,9 +44,7 @@
 <center>
     <div class="card card-default mt-3 col-md-8">
         <div class="card-body p-3 col-md-12">
-            <div class="card-header text-danger text-left border-bottom-0">
-                <p>* Campos requeridos</p>
-            </div>
+
             <div>
                 @using (Html.BeginForm("Edit", "CorreoEmisor", FormMethod.Post))
                 {
@@ -77,25 +75,29 @@
                                 </div>
 
                                 @*@if (Model.Estado)
-                                    {*@
+                            {*@
                                 @*<div class="form-group">
-                                        <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
-                                            @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
-                                            <label class="custom-control-label" for="customSwitch3">Estado</label>
-                                        </div>
-                                    </div>*@
-                                @*}
-                                    else
-                                    {
-                                        <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
-                                    }*@
-                                <div class="modal-footer justify-content-end">
-                                    <button type="submit" class="btn btn-success">Guardar</button>
+                                <div class="custom-control custom-switch custom-switch-off-danger custom-switch-on-success">
+                                    @Html.EditorFor(model => model.Estado, new { htmlAttributes = new { @class = "custom-control-input", id = "customSwitch3", @type = "checkbox" } })
+                                    <label class="custom-control-label" for="customSwitch3">Estado</label>
                                 </div>
+                            </div>*@
+                                @*}
+                            else
+                            {
+                                <span class="right badge-pill badge-warning">La categoría de este puesto está desactivada.</span>
+                            }*@
+                                
                             </div>
                         </div>
                     </form>
                 }
+            </div>
+            <div class="card-footer text-danger text-left border-bottom-0">
+                <p>* Campos requeridos</p>
+                <div style="float:right">
+                    <button type="submit" class="btn btn-success">Guardar</button>
+                </div>
             </div>
         </div>
     </div>
