--- a/Web/Views/Puesto/Create.cshtml
+++ b/Web/Views/Puesto/Create.cshtml
@@ -27,9 +27,6 @@
     <center>
         <div class="card card-default mt-3 col-md-8">
             <div class="card-body p-3 col-md-12">
-                <div class="card-header text-danger text-left border-bottom-0">
-                    <p>* Campos requeridos</p>
-                </div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row text-left">
                     <div class="col-md-12">
@@ -50,23 +47,26 @@
                             </div>
                         </div>
 
-               
-                        <div style="float:right">
-                            <button type="submit" class="btn btn-success">Guardar</button>
-                        </div>
+
+
+                    </div>
+                </div>
+                <div class="card-footer text-danger border-bottom-0" style="text-align:left">
+                    <p>* Campos requeridos</p><div style="float:right">
+                        <button type="submit" class="btn btn-success">Guardar</button>
                     </div>
                 </div>
             </div>
         </div>
     </center>
-    
+
 }
 
 
 @section scripts {
     @Scripts.Render("~/bundles/jqueryval")
     <script>
-    //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
+        //AQUI PARA PONER ACTIVO EL NAV-LINK, PONERSE EN CADA PAGINA
         $(document).ready(function () {
             $("#mantenimientos").addClass('active');
             $("#menupuestos").addClass('active');
