--- a/Web/Views/RolServicio/Create.cshtml
+++ b/Web/Views/RolServicio/Create.cshtml
@@ -41,9 +41,6 @@
 
 
 <div class="card  mt-3">
-    <div class="card-header text-danger border-bottom-0">
-        <p>* Campos requeridos</p>
-    </div>
     <div class="card-body p-3">
         <div class="bs-stepper">
             <div class="bs-stepper-header modal-header" style="border-bottom:hidden" role="tablist" hidden>
@@ -105,7 +102,7 @@
                                                     <div class="input-group-text"><i class="fa fa-calendar"></i></div>
                                                 </div>
                                             </div>
-                                            <p id="errorFecha"  class="text-danger"></p>
+                                            <p id="errorFecha" class="text-danger"></p>
                                         </div>
                                     </div>
                                 </div>
@@ -272,6 +269,9 @@
                 </div>
             </form>
         </div>
+    </div>
+    <div class="card-footer text-danger border-bottom-0">
+        <p>* Campos requeridos</p>
     </div>
 </div>
 
