--- a/Web/Views/RolServicio/Edit.cshtml
+++ b/Web/Views/RolServicio/Edit.cshtml
@@ -32,9 +32,6 @@
 
 
 <div class="card card-default mt-3">
-    <div class="card-header text-danger border-bottom-0">
-        <p>* Campos requeridos</p>
-    </div>
     <div class="card-body p-3">
         <div class="bs-stepper">
             <div class="bs-stepper-header modal-header" style="border-bottom:hidden" role="tablist" hidden>
@@ -166,7 +163,7 @@
                                                 <br />
                                                 <span class="right badge badge-danger" id="alertaCancion" data-info="error-categoria">Aún no hay canciones.</span>
                                             }
-                                        <p id="errorCancion" class="text-danger"></p>
+                                            <p id="errorCancion" class="text-danger"></p>
 
                                         </div>
                                     </div>
@@ -265,7 +262,9 @@
             </form>
         </div>
     </div>
-
+    <div class="card-footer text-danger border-bottom-0">
+        <p>* Campos requeridos</p>
+    </div>
 </div>
 
 
