--- a/Web/Views/Usuario/Edit.cshtml
+++ b/Web/Views/Usuario/Edit.cshtml
@@ -27,9 +27,7 @@
 
 
 <div class="card card-default mt-3">
-    <div class="card-header text-danger border-bottom-0">
-        <p>* Campos requeridos</p>
-    </div>
+
     <div class="card-body p-3 col-md-12">
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         @Html.HiddenFor(model => model.Id)
@@ -97,11 +95,14 @@
 
             </div>
         </div>
+        
+    </div>
+    <div class="card-footer text-danger border-bottom-0">
+        <p>* Campos requeridos</p>
         <div style="float:right">
             <button type="submit" class="btn btn-success">Guardar</button>
         </div>
     </div>
-
 </div>
 
 
