--- a/Web/Views/Bitacora/Index.cshtml
+++ b/Web/Views/Bitacora/Index.cshtml
@@ -156,7 +156,8 @@
         // selector and a `content` prop:
         tippy('#btnTooltip', {
             content: 'Estos registros se crean cada vez que se modifica o elimina un rol de servicio. ' +
-                'Puedes consultar y eliminar uno o todos los registros desde sus respectivos botones',
+                'Puedes consultar y eliminar uno o todos los registros desde sus respectivos botones. ' +
+                'Es recomendable borrar estos registros periódicamente para evitar la acumulación de datos innecesarios.',
             arrow: true,
             animation: 'scale',
             trigger: 'click',
