--- a/Web/Views/Cancion/Index.cshtml
+++ b/Web/Views/Cancion/Index.cshtml
@@ -313,7 +313,7 @@
         function eliminar(id) {
             Swal.fire({
                 title: '¿Estás seguro?',
-                text: "¡No podrás revertirlo!",
+                text: "¡No podrás revertirlo! Esta canción también será eliminada de los servicios ya creados.",
                 icon: 'warning',
                 showCancelButton: true,
                 confirmButtonColor: '#3085d6',
