--- a/Web/Views/CorreoEmisor/Index.cshtml
+++ b/Web/Views/CorreoEmisor/Index.cshtml
@@ -87,7 +87,7 @@
                         <h5><i class="icon fas fa-exclamation-triangle"></i> Aviso!</h5>
                         <p>El correo electrónico que se utiliza, debe tener activado el acceso de aplicaciones menos seguras.</p>
                         <br />
-                        <p>Para más información, <a target="_blank" href="https://support.google.com/accounts/answer/6010255?hl=es-419">Haz click aquí</a></p>
+                        <p>Para más información, <a style="color: blue" target="_blank" href="https://support.google.com/accounts/answer/6010255?hl=es-419">Haz click aquí</a></p>
                     </div>
                 </div>
 
