--- a/Web/Views/Usuario/Details.cshtml
+++ b/Web/Views/Usuario/Details.cshtml
@@ -51,7 +51,11 @@
                     }
                     else
                     {
-                        <img src="~/Content/dist/img/avatar.png" id="ImagenUsuario" style="height:200px; width: 200px" />
+                    <div class="text-center">
+                        <img src="~/Content/dist/img/avatar.png" id="ImagenUsuario" style="height: 150px; width: 150px; border-radius: 100px" />
+                        <br />
+                        <span class="badge badge-secondary">Sin foto de perfil</span>
+                    </div>
                     }
 
 
