--- a/Web/Views/Reporte/ReporteSesion.cshtml
+++ b/Web/Views/Reporte/ReporteSesion.cshtml
@@ -31,14 +31,15 @@
 
 <center>
     <div class="card card-default mt-3 col-md-8">
-        <div class="card-header">
-            <div style="float: right; cursor: pointer">
-                <button class="btn" id="btnTooltip">
-                    <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
-                </button>
-            </div>
-        </div>
+        
         <div class="card-body p-3 col-md-12">
+            <div class="card-header border-bottom-0">
+                <div style="float: right; cursor: pointer">
+                    <button class="btn" id="btnTooltip">
+                        <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                    </button>
+                </div>
+            </div>
             <div class="row text-left">
                 <div class="col-md-12">
                     <div id="container-fluid">
