--- a/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
+++ b/Web/Views/Reporte/ReporteUsuariosIngresados.cshtml
@@ -28,16 +28,13 @@
 
     <center>
         <div class="card card-default mt-3 col-md-8">
-            <div class="card-header">
-                <div style="float: right; cursor: pointer">
-                    <button class="btn" type="button" id="btnTooltip">
-                        <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
-                    </button>
-                </div>
-            </div>
             <div class="card-body p-3 col-md-12">
-                <div class="card-header text-danger text-left border-bottom-0">
-                    <p>* Campos requeridos</p>
+                <div class="card-header border-bottom-0">
+                    <div style="float: right; cursor: pointer">
+                        <button class="btn" type="button" id="btnTooltip">
+                            <i class="fa fa-info-circle text-primary" style="font-size: x-large"></i>
+                        </button>
+                    </div>
                 </div>
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="row text-left">
@@ -62,15 +59,14 @@
 
 
 
+                        <div class="card-footer">
+                            <p class="text-danger">* Campos requeridos</p>
+                            <div style="float:right">
 
-
-
-
-                        <div style="float:right">
-
-                            <p class="tooltip--left" data-tooltip="Abre una nueva ventana mostrando el reporte">
-                                <input id="btnAceptar" type="submit" disabled formtarget="_blank" value="Generar Reporte" class="btn btn-info" />
-                            </p>
+                                <p class="tooltip--left" data-tooltip="Abre una nueva ventana mostrando el reporte">
+                                    <input id="btnAceptar" type="submit" disabled formtarget="_blank" value="Generar Reporte" class="btn btn-info" />
+                                </p>
+                            </div>
                         </div>
                     </div>
                 </div>
