--- a/Web/Views/Shared/_Navigation.cshtml
+++ b/Web/Views/Shared/_Navigation.cshtml
@@ -11,14 +11,31 @@
             @Html.ActionLink("Inicio", "Index", "Home", null, new { @class = "nav-link" })
 
         </li>
-        <li class="nav-item d-none d-sm-inline-block">
+        <li class="nav-item d-sm-inline-block">
             @Html.ActionLink("Contacto", "Contact", "Home", null, new { @class = "nav-link" })
         </li>
+        @if (UsuarioLogueado != null)
+        {
+            if (UsuarioLogueado.IdRol == 1)
+            {
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="~/Content/Manual/CV.pdf">Ayuda <i class="far fa-question-circle"></i></a>
+                </li>
+            }
+            else
+            {
+                <li class="nav-item">
+                    <a class="nav-link" target="_blank" href="~/Content/Manual/CV.pdf">Ayuda <i class="far fa-question-circle"></i></a>
+                </li>
+            }
+        }
+
     </ul>
 
     <!-- Right navbar links -->
     <ul class="navbar-nav ml-auto">
-
+        
+        
         <li class="nav-item dropdown user-menu">
             <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">
                 @if (UsuarioLogueado != null)
@@ -49,8 +66,11 @@
                 </span>
             </a>
             <ul class="dropdown-menu dropdown-menu-lg dropdown-menu-right" style="border-radius: 0px 0px 20px 20px">
+
+
+
                 <!-- User image -->
-                <li class="user-header bg-gradient-gray-dark" >
+                <li class="user-header bg-gradient-gray-dark">
                     <!--<img src="~/Content/dist/img/avatar.png" class="img-circle elevation-2" alt="User Image">-->
                     @if (UsuarioLogueado != null)
                     {
